--- a/Mobile/www/views/auth/walkthrough.html
+++ b/Mobile/www/views/auth/walkthrough.html
@@ -8,10 +8,10 @@
     <div class="bottom-content row">
       <div class="col col-center">
         <a class="login button button-block button-stable" ui-sref="auth.login">
-          Log In
+          Giriş Yap
         </a>
         <a class="sign-up button button-block button-stable" ui-sref="auth.signup">
-          Sign Up
+          Kayıt Ol
         </a>
       </div>
     </div>
