--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -5,7 +5,7 @@
                 <ul class="nav navbar-nav" style="width:100%">
                     <li style="max-width:500px; padding: 16px;float:left">
                         <a ui-sref="home.locations" ui-sref-opts="{reload: true}">
-                            <img src="../assets/layouts/layout3/img/logo-default.jpg" alt="logo" class="logo-default">
+                            <img src="assets/layouts/layout3/img/logo-default.jpg" alt="logo" class="logo-default">
                         </a>
                     </li>
 
@@ -30,12 +30,12 @@
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
                                         <a ui-sref="home.account({userId: userID  })">
-                                            <i class="icon-user"></i> My Profile
+                                            <i class="icon-user"></i> Profil
                                         </a>
                                     </li>
                                     <li>
                                         <a ng-click="logout()">
-                                            <i class="icon-key"></i> Log Out
+                                            <i class="icon-key"></i> Çıkış Yap
                                         </a>
                                     </li>
                                     <li>
