--- a/Mobile/www/views/app/locations/details.html
+++ b/Mobile/www/views/app/locations/details.html
@@ -19,11 +19,23 @@
             </ion-slide-box>
             <hr />
             <p class="post-excerpt" dynamic-anchor-fix ng-bind-html="location.Info | rawHtml"></p>
-           <br />
+            <br />
+
+            <h2 class="label label-info calm">
+                Yorum Yap
+            </h2>
+            <div class="col col-center">
+
+                <textarea rows="5" style="width:100%;background-color:#EAEAEA"></textarea>
+                <button class=" button button-assertive pull-right" style="    float: right; margin: 10px;">Gönder</button>
+            </div>
+            <br />
             <h2 class="label label-info calm">
                 Yorumlar
             </h2>
+
             <br />
+
              <div class="list">
 
                 <span class="item item-avatar"  ng-repeat="comment in location.Comments" style="border:0px!important;border-bottom: 2px solid #181918!important;">
@@ -33,14 +45,7 @@
                 </span>
             </div>
             <br />
-            <h2 class="label label-info calm">
-                Yorum Yap
-            </h2>
-            <div class="col col-center">
-
-                <textarea rows="5" style="width:100%;background-color:wheat"></textarea>
-                <button class=" button button-assertive pull-right" style="    float: right; margin: 10px;">Gönder</button>
-            </div>
+           
         </div>
         <!--<div class="post-tags item item-text-wrap">
             <span class="post-tag button button-small button-outline button-stable">{{category.title}}</span>
@@ -50,10 +55,13 @@
     <ion-footer-bar class="post-footer bar bar-footer bar-calm" style="background-color:#21692E!important">
         <div class="row">            
        
-            <div class="col col-20 col-center">
-                <a class="button button-icon icon ion-heart button-balanced">{{location.LikeCount}}</a>
-            </div>       
-            <div class="col-offset-66 col-center">
+            <div class="col col-20 col-center" ng-if="location.IsLiked">
+                <a class="button button-icon icon ion-star">{{location.LikeCount}}</a>
+            </div> 
+            <div class="col col-20 col-center" ng-if="!location.IsLiked">
+                <a class="button button-icon icon ion-ios-star-outline">{{location.LikeCount}}</a>
+            </div>        
+            <div class="col-offset-50 col-center">
                 <a class="button button-calm" ng-click="open()">Yol Tarifi Al</a>
             </div>
         </div>
