--- a/Mobile/www/views/app/locations/directions.html
+++ b/Mobile/www/views/app/locations/directions.html
@@ -3,14 +3,14 @@
         <div class="mapWrap" data-tap-disabled="true">
             <div class="col">
                 <map center="{{latitude}},{{longitude}}" zoom="12" style="height:300px;">
-                    <info-window id="1" position="{{latitude}},{{longitude}}" visible="true">
+                    <!--<info-window id="1" position="{{latitude}},{{longitude}}" visible="true">
                         <div ng-non-bindable="">
                             <b>{{location.Name}}</b><br>
                             {{location.Info}} <br>
                             <img ng-repeat="image in location.Images" style="border-radius: 24px;" ng-src="{{image.Path}}" height="50" width="50" />
 
                         </div>
-                    </info-window>
+                    </info-window>-->
                 </map>
 
             </div>
