--- a/Mobile/www/views/auth/login.html
+++ b/Mobile/www/views/auth/login.html
@@ -18,7 +18,7 @@
                         </my-tabs>
                         <div class="item item-body bottom-content">
                             <button type="submit" class="button button-positive button-block" ng-click="doLogIn()" ng-disabled="(login_form.user_email.$invalid || login_form.user_password.$invalid)">
-                                Log In
+                               Giriş Yap
                             </button>
                         </div>
                     </form>
@@ -32,10 +32,10 @@
                 </div>
                 <div class="alternative-actions">
                     <a class="forgot-password button button-small button-clear button-light" ui-sref="auth.forgot-password">
-                        Forgot Password?
+                        Şifremi Unuttum?
                     </a>
                     <a class="sign-up button button-small button-clear button-light" ui-sref="auth.signup">
-                        Sign Up
+                        Kayıt Ol
                     </a>
 
                 </div>
