--- a/Web/views/admin-partials/addLocation.html
+++ b/Web/views/admin-partials/addLocation.html
@@ -77,11 +77,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <textarea name="content" id="info" placeholder="Yer açıklaması" data-provide="markdown" rows="10" required></textarea>
-                            <div ng-show="form.$submitted || form.info.$touched">
-                                <p ng-show="form.info.$error.required" class="alert alert-info">Yer Açıklamasını Doldurunuz</p>
-                                <p ng-show="form.info.$error.minlength" class="alert alert-danger">Yer Açıklaması 3 karakterden az olamaz</p>
+                            <div class="col-md-10">
+                                <div name="summernote" id="summernote_1"> </div>
                             </div>
+                           
                         </div>
                         <div class="form-actions">
                             <button type="button" ng-disabled="form.$invalid" id="register-submit-btn" class="btn btn-success uppercase pull-right margin-bottom-20 " ng-click="addNewLocation()">Ekle</button>
