--- a/Web/views/partials/comments.html
+++ b/Web/views/partials/comments.html
@@ -15,13 +15,13 @@
                     <div class="media" ng-repeat="comment in location.Comments">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}"  style="height:48px ;width:48px">
+                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}" style="height:48px ;width:48px">
                             </a>
 
                         </div>
                         <div class="media-body " style=" width:100%; height:100%">
                             <span class="ng-binding caption-subject bold uppercase">
-                                <a href="#">{{comment.UserName}}</a>
+                                <a ui-sref="home.account({userId: comment.UserId  })">{{comment.UserName}}</a>
                             </span>
                             <span am-time-ago="comment.Date" class="c-date caption-helper caption font-grey-silver"></span>
 
