--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -8,74 +8,84 @@
                     </div>
                 </div>
                 <div class="portlet-body">
-                    <uib-carousel interval="myInterval" style="margin:auto;height:305px; max-width:800px">
-                        <uib-slide ng-repeat="slide in slides" active="slide.active">
-                            <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
-                            <div class="carousel-caption">
-                                <p>{{slide.text}}</p>
-                            </div>
-                        </uib-slide>
-                    </uib-carousel>
-                    <div class="blog-single-desc">
-                        <p ng-bind-html="location.Info">
 
-                        </p>
 
-                    </div>
-                    <div class="blog-single-foot margin-bottom-10">
-                        <span ng-click="open(location)" role="button" data-toggle="tab" class="btn blue btn-outline btn-file pull-right margin-bottom-40"> Yol Tarifi Al </span>
-                       
-                    </div>
 
-                    <br/>
-                    <div class="bg-green-dark bg-font-green-dark" style="height:41px; margin-top:45px;">
-                        <div class="caption" style="    padding: 10px 15px 10px">
-                            <i class=" fa fa-commenting-o" style="float: left; margin-top: 4px; display: inline-block;font-size: 18px; margin-right: 10px;"></i>Yorumlar({{location.CommentCount}})
+                    <div class="blog-single-content blog-container">
+                        <div class="blog-single-img">
+                            <uib-carousel interval="myInterval" style="margin:auto;height:500px; width:800px">
+                                <uib-slide ng-repeat="slide in slides" active="slide.active">
+                                    <img ng-src="{{slide.image}}" style="margin:auto;height:500px; width:800px">
+                                    <div class="carousel-caption">
+                                        <p>{{slide.text}}</p>
+                                    </div>
+                                </uib-slide>
+                            </uib-carousel>
                         </div>
-                    </div>
-                    <br />
-                    <div class="row">
-                        <div class="col-lg-6" style=" border-right:1px solid #eee   ">
-                            <div class=" blog-comments" style="width:100%;">
-                                <div class="c-comment-list" style="max-height:250px; max-width:100%; overflow:auto; margin-top:-10px ; margin-left:25px;">
-                                    <div class="media" ng-repeat="comment in location.Comments">
-                                        <div class="media-left">
-                                            <a href="#">
-                                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}">
-                                            </a>
-                                        </div>
-                                        <div class="media-body " style=" width:100%; height:100%">
-                                            <span class="ng-binding caption-subject bold uppercase">
-                                                <a href="#">{{comment.UserName}}</a>
-                                            </span>
-                                            <span am-time-ago="comment.Date" class="c-date caption-helper caption font-grey-silver"></span>
+                        <div class="blog-single-desc">
+                            <p ng-bind-html="location.Info">
 
-                                            <div class="media-middle" style=" max-height:100%; max-width:100px; ">
-                                                <span>    {{comment.Comment}}</span>
+                            </p>
+                        </div>
+                        <div class="row">
+                            <span ng-click="open(location)" role="button" data-toggle="tab" class="btn blue btn-outline btn-file pull-right margin-bottom-40" style="margin-left:20px  ;  margin-right: 20px;"> Yol Tarifi Al </span>
 
-                                            </div>
+                            <span ng-if="location.IsLiked" class="btn  blue-steel pull-right" ng-disabled="!isLogged" ng-click="unlike(location.ID)">
+                                <i class="fa fa-star"></i> &nbsp;{{location.LikeCount}}
+                            </span>
+                            <span ng-if="!location.IsLiked" class="btn  green-sharp pull-right margin-bottom-40" ng-disabled="!isLogged" ng-click="like(location.ID)">
+                                <i class="fa fa-star-o"></i> &nbsp;{{location.LikeCount}}
+                            </span>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div ng-if="isVisible">
+
+                                    <div class="form-group">
+
+                                        <textarea rows="5" name="message" ng-model="comment.Comment" placeholder="Yorumunuzu Yazınız ..." class="form-control c-square"></textarea>
+                                    </div>
+                                    <div class="form-group ">
+                                        <button type="button" class="btn blue uppercase pull-right" ng-click="sendComment()">Gönder</button>
+                                    </div>
+                                </div>
+                                <div class=" blog-comments" style="width:100%;">
+                                    <div class="bg-green-dark bg-font-green-dark" style="height:41px;">
+                                        <div class="caption" style="    padding: 10px 15px 10px">
+                                            <i class=" fa fa-commenting-o" style="float: left; margin-top: 4px; display: inline-block;font-size: 18px; margin-right: 10px;"></i>Yorumlar({{location.CommentCount}})
                                         </div>
                                     </div>
+                                    <div class="c-comment-list" style="max-width:100%; overflow:auto; margin-top:-10px ; margin-left:25px;">
+                                        <div class="media" ng-repeat="comment in location.Comments">
+                                            <div class="media-left">
+                                                <a href="#">
+                                                    <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}">
+                                                </a>
+                                            </div>
+                                            <div class="media-body " style=" width:100%; height:100%">
+                                                <span class="ng-binding caption-subject bold uppercase">
+                                                    <a ui-sref="home.account({userId: comment.UserId  })">{{comment.UserName}}</a>
+                                                </span>
+                                                <span am-time-ago="comment.Date" class="c-date caption-helper caption font-grey-silver"></span>
 
+                                                <div class="media-middle" style=" max-height:100%; max-width:100px; ">
+                                                    <span>    {{comment.Comment}}</span>
+
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div ng-if="isVisible">
-                                <div class="form-group">
-                                    <textarea rows="5" name="message" ng-model="comment.Comment" placeholder="Yorumunuzu Yazınız ..." class="form-control c-square"></textarea>
-                                </div>
-                                <div class="form-group ">
-                                    <button type="button" class="btn blue uppercase pull-right" ng-click="sendComment()">Gönder</button>
-                                </div>
-                            </div>
+                         
                         </div>
                     </div>
 
+
                 </div>
+
             </div>
-
-
 
         </div>
 
