--- a/Web/views/admin-partials/header.html
+++ b/Web/views/admin-partials/header.html
@@ -8,31 +8,35 @@
      
            <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
 
-        <div class="page-top">
+        <div class="page-top" ng-controller="HeaderCtrl">
 
             <div class="top-menu">
                 <ul class="nav navbar-nav pull-right">
                     <li class="dropdown dropdown-user">
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                             <img alt="" class="image" ng-src="{{profileImg}}" />
-                            <span class="username username-hide-on-mobile"> {{nick}} </span>
+                            <span class="username username-hide-on-mobile"> {{nick|strLimit:12}} </span>
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li>
-                                <a href="page_user_profile_1.html">
-                                    <i class="icon-user"></i> Profilim
+                                <a ui-sref="home.account({userId: userID  })">
+                                    <i class="icon-user"></i> Profil
                                 </a>
                             </li>
-                          
                             <li>
-                                <a href="page_user_login_1.html">
+                                <a ng-click="logout()">
                                     <i class="icon-key"></i> Çıkış Yap
+                                </a>
+                            </li>
+                            <li>
+                                <a ng-show="showAdminPanel" ui-sref="admin">
+                                    <i class="icon-key"></i> Admin Panel
                                 </a>
                             </li>
                         </ul>
                     </li>
-                   
+
                 </ul>
             </div>
         </div>
