--- a/Web/views/partials/account.html
+++ b/Web/views/partials/account.html
@@ -5,8 +5,8 @@
 
                 <div class="portlet light profile-sidebar-portlet  ">
 
-                    <div class="profile-userpic fileinput fileinput-exists" data-provides="fileinput">
-                        <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="border:0">
+                    <div class="profile-userpic fileinput fileinput-exists" data-provides="fileinput" style="height:193px;width:300px">
+                        <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="border:0;height:154px;width:300px" >
 
                             <img ng-src="{{user.ImgPath}}" class="img-responsive" style="height: 100%;
     width: 50%;">
