--- a/Web/views/main.html
+++ b/Web/views/main.html
@@ -5,23 +5,24 @@
         <div class="page-head">
             <div class="container">
                 <div class="page-title">
-                  
+
                 </div>
-           
+
             </div>
         </div>
     </div>-->
     <div class="page-container">
-        <div class="page-content-wrapper">          
+        <div class="page-content-wrapper">
             <div class="page-content">
                 <div class="container">
 
                     <div ui-view></div>
-                 
+                    <script type="text/javascript">
+                        $('link[href*="assets/layouts/layout2/css/layout.min.css"]').attr("disabled", "disabled");
+
+                    </script>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
