--- a/Web/views/admin-partials/header.html
+++ b/Web/views/admin-partials/header.html
@@ -2,7 +2,7 @@
     <div class="page-header-inner ">
         <div class="page-logo">
             <a href="index.html">
-                <img src="assets/layouts/layout2/img/logoadmin.png" alt="logo" class="logo-default" style="margin: 4px -6px 0;" />
+                <img src="assets/img/logoadmin.png" alt="logo" class="logo-default" style="margin: 4px -6px 0;" />
             </a>
         </div>
      
