--- a/Web/views/admin-partials/addLocation.html
+++ b/Web/views/admin-partials/addLocation.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <select class="form-control" name="select" ng-model="location.Type_ID">
+                            <select class="form-control" name="select" ng-model="location.TypeId">
                                 <option value="">Mekan Tipi...</option>
                                 <option ng-repeat="type in locationTypes " value="{{type.LocationType_ID}}">{{type.LocationType_Name}}</option>
 
