--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -50,7 +50,7 @@
                         </a>
                         <ul class="dropdown-menu pull-right">
                             <li>
-                                <a href="javascript:;">
+                                <a ui-sref="admin.editLocation({locationId: location.ID   })">
                                     <i class="fa fa-pencil"></i> Düzenle
                                 </a>
                             </li>
