--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -6,7 +6,7 @@
                     <li style="max-width:500px; padding: 16px;float:left">
 
                         <a ui-sref="home.locations" ui-sref-opts="{reload: true}" style="padding-top:0px; margin-top:-7px">
-                            <img src="../assets/img/yesillogokalin.png" alt="logo" class="logo-default">
+                            <img src="assets/img/yesillogokalin.png" alt="logo" class="logo-default">
                             <!--<img src="../assets/layouts/layout3/img/mlogo.jpg" alt="logo" class="logo-default">-->
                             </a>
                     </li>
@@ -25,7 +25,7 @@
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="image" ng-src="{{profileImg}}" />
+                                    <img alt="" class="image" ng-src="{{profileImg}}"  style="max-height: 50px; max-width: 60px;"/>
                                     <span class="username username-hide-on-mobile"> {{nick|strLimit:12}} </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
