--- a/Web/views/partials/locations.html
+++ b/Web/views/partials/locations.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="page-content-inner">
+<div class="page-content-inner" >
     <div class="portfolio-content portfolio-1">
         <div class="row">
             <div class="col-md-12">
@@ -39,7 +39,7 @@
             <div class="col-lg-12" style="margin-top:20px">
                 <div class="portlet light bordered">
                     <div class="portlet-title">
-                        <div class="caption font-green-sharp" >
+                        <div class="caption font-green-sharp">
                             <i class="fa fa-map-marker font-green"></i>
                             <span class="caption-subject bold uppercase " style="font-size:20px"> Mekanlar</span>
                         </div>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="portlet-body">
                         <div class="scroller" data-rail-visible="1" data-rail-color="yellow" data-handle-color="#a1b2bd">
-                            <div id="js-grid-juicy-projects" class="cbp">
+                            <div id="js-grid-juicy-projects" class="cbp" infinite-scroll="myPagingFunction()" infinite-scroll-distance="3">
                                 <div class="cbp-item {{location.TypeId}}" ng-repeat="location in locations">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
@@ -81,13 +81,13 @@
                                             <i class=" fa fa-location-arrow">
                                             </i> &nbsp;{{location.DistanceToUser|number:1}} km
                                         </button>
-                                        <button ng-if="location.IsLiked" type="button" class="btn btn-sm blue-steel"  ng-click="unlike(location.ID) " style="width:25%">
+                                        <button ng-if="location.IsLiked" type="button" class="btn btn-sm blue-steel" ng-click="unlike(location.ID) " style="width:25%">
                                             <i class="fa fa-star"></i> &nbsp;{{location.LikeCount}}
                                         </button>
-                                        <button ng-if="!location.IsLiked" type="button" class="btn btn-sm green-sharp"  ng-click="like(location.ID)" style="width:25%">
+                                        <button ng-if="!location.IsLiked" type="button" class="btn btn-sm green-sharp" ng-click="like(location.ID)" style="width:25%">
                                             <i class="fa fa-star-o"></i> &nbsp;{{location.LikeCount}}
                                         </button>
-                                        <button type="button" class="btn btn-sm yellow" ng-click="openComment(location)"   style="width:25%">
+                                        <button type="button" class="btn btn-sm yellow" ng-click="openComment(location)" style="width:25%">
                                             <i class=" fa fa-commenting-o">
                                             </i> &nbsp;{{location.CommentCount}}
                                         </button>
@@ -99,15 +99,15 @@
                                     </div>
                                     <!--<div class="blog-post-meta text-center">
 
-                                        <a class="font-green-jungle btn" ng-click="like(location.ID)"> <i class="fa fa-thumbs-up"> &nbsp;{{location.LikeCount}}</i> </a>
-                                        <span style="margin:5px"></span>
-                                        <a class="font-blue-steel btn btn-block" ng-click="comment(location.ID)"> <i class="fa fa-commenting-o">&nbsp;{{location.CommentCount}}</i> </a>
-                                        <span class="bg-green-meadow bg-font-green-meadow btn pull-left" ng-if="location.DistanceToUser>0">{{location.DistanceToUser|number:0}} km</span>
+                <a class="font-green-jungle btn" ng-click="like(location.ID)"> <i class="fa fa-thumbs-up"> &nbsp;{{location.LikeCount}}</i> </a>
+                <span style="margin:5px"></span>
+                <a class="font-blue-steel btn btn-block" ng-click="comment(location.ID)"> <i class="fa fa-commenting-o">&nbsp;{{location.CommentCount}}</i> </a>
+                <span class="bg-green-meadow bg-font-green-meadow btn pull-left" ng-if="location.DistanceToUser>0">{{location.DistanceToUser|number:0}} km</span>
 
-                                        <a ng-click="openMap(location)" data-toggle="tab" class="btn btn-primary pull-right"> Yol Tarifi Al </a>
+                <a ng-click="openMap(location)" data-toggle="tab" class="btn btn-primary pull-right"> Yol Tarifi Al </a>
 
 
-                                    </div>-->
+            </div>-->
 
                                 </div>
 
@@ -123,4 +123,5 @@
 
     </div>
 </div>
+
 <script src="assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
