--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -6,7 +6,7 @@
                     <li style="max-width:500px; padding: 16px;float:left">
 
                         <a ui-sref="home.locations" ui-sref-opts="{reload: true}" style="padding-top:0px; margin-top:-7px">
-                            <img src="../assets/img/yesillogokalin.png" alt="logo" class="logo-default">
+                            <img src="assets/img/yesillogokalin.png" alt="logo" class="logo-default">
                             <!--<img src="../assets/layouts/layout3/img/mlogo.jpg" alt="logo" class="logo-default">-->
                             </a>
                     </li>
