--- a/Web/views/admin-partials/users.html
+++ b/Web/views/admin-partials/users.html
@@ -45,12 +45,12 @@
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu pull-right">
-                            <li class="dropdown-toggle">
-                                <a href="javascript:;">
+                            <!--<li class="dropdown-toggle">
+                                <a ng-click="OpenUser(user.ID)">
                                     <i class="fa fa-laptop"></i> Yetkilendir
                                 </a>
 
-                            </li>
+                            </li>-->
                             <li>
                                 <a ng-click="DeleteUser(user.ID)">
                                     <i class="fa fa-remove"></i> Sil
